# transcriber

./: .gitignore  CLAUDE.md  README.md  TODO.md  main.py  pyproject.toml  release.sh  run.sh
transcribe/: cli.py
