[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "transcribe"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "faster-whisper>=1.2.1",
    "nvidia-cublas-cu12>=12.9.2.10",
    "nvidia-cuda-runtime-cu12>=12.9.79",
    "sounddevice>=0.5.1",
]

[project.scripts]
transcribe = "transcribe.cli:main"
